[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/level_assets/mask_barrier_center.png" type="Texture" id=1]
[ext_resource path="res://assets/level_assets/mask_barrier_right.png" type="Texture" id=2]
[ext_resource path="res://assets/level_assets/mask_barrier_left.png" type="Texture" id=3]
[ext_resource path="res://src/MaskBarrier.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 22.9744

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.969, 6.42894 )

[sub_resource type="CircleShape2D" id=3]
radius = 26.6623

[node name="MaskBarrier" type="Area2D"]
script = ExtResource( 4 )

[node name="LeftBarrier" type="Area2D" parent="."]
position = Vector2( 1.94576, 5.2002 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="LeftBarrier"]
position = Vector2( 0.0456085, -0.0218658 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBarrier"]
position = Vector2( 1, -4 )
shape = SubResource( 1 )

[node name="CenterBarrier" type="Area2D" parent="."]
position = Vector2( 38.7272, -9.4718 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="CenterBarrier"]
position = Vector2( 1.4142, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterBarrier"]
position = Vector2( 1, -11 )
shape = SubResource( 2 )

[node name="RightBarrier" type="Area2D" parent="."]
position = Vector2( 81.5528, -1.6022 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="RightBarrier"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBarrier"]
position = Vector2( -6, 4 )
shape = SubResource( 3 )
[connection signal="area_entered" from="LeftBarrier" to="." method="_on_LeftBarrier_area_entered"]
[connection signal="area_entered" from="CenterBarrier" to="." method="_on_CenterBarrier_area_entered"]
[connection signal="area_entered" from="RightBarrier" to="." method="_on_RightBarrier_area_entered"]
